--- a/rep01.html
+++ b/rep01.html
@@ -22,7 +22,7 @@
 <body>
   <div class=header>
     <h1>1週目のレポート ： 公大高専１年実習I-1</h1>
-    <div>〇〇班〇〇番 ニックネーム</div>
+    <div>4b班31番 稗田泰慈</div>
   </div>
   <div class=1week>
     <h2>第1週目</h2>
@@ -31,11 +31,11 @@
       <img src="art.png" alt="ラインアートの画像" width="50%" height="50%">
       <div>
         1.内容<br>
-        学習した内容を説明する文章を<br>
-        自分で考えて作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        猫の動きと角度を指定して線を引くプログラムを作った。<br>
+        繰り返しの移動の回数や移動の幅、色の基調を変えることによって図形の姿模様がが大きく変わることを学んだ<br>
         2.感想<br>
-        学習した内容を実践したときに自分が感じた感想を<br>
-        自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        自分で作った、1度刻みで線を描くことによって隙間がないように見える図形のグラデーションがきれいだった。<br>
+        ほかの人の作品が木を組み合わせた建築のようで興味深かった。<br>
       </div>
     </div>
 
@@ -56,13 +56,13 @@
       <h3>1-3 ホームページ作成</h3>
       <div>
         <!-- 下のyourIDを 自分のIDに書き替える↓ -->
-        <a href="https://yourID.github.io/web/">私のホームページ</a><br>
+        <a href="https://Pensakix.github.io/web/">私のホームページ</a><br>
         1.内容<br>
-        学習した内容を説明する文章を<br>
-        自分で考えて作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        点数カウントの表示、猫の移動できる範囲を指定、りんごの落下速度を乱数を使ってランダムにするといった<br>
+        ゲーム性があるシンプルな作品の作り方を学んだ。<br>
         2.感想<br>
-        学習した内容を実践したときに自分が感じた感想を<br>
-        自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        りんごがある地点のy座標を下回ったら減点になり、りんごの落ちる数を指定するプログラムを付け加えたらもっと面白くなると思う。<br>
+        シンプルなゲームは新たな属性を付け加えやすいところが良いところだと思う。<br>
       </div>
     </div>
 
@@ -70,15 +70,15 @@
       <h3>各ページへのリンク</h3>
       <div>
         <!-- 下のyourIDを 自分のIDに書き替える↓ -->
-        <a href="https://yourID.github.io/web/rep01.html">1週目のレポート</a><br>
-        <a href="https://yourID.github.io/web/rep02.html">2週目のレポート</a><br>
-        <a href="https://yourID.github.io/web/rep03.html">3週目のレポート</a><br>
-        <a href="https://yourID.github.io/web/">私のホームページ</a><br>
+        <a href="https://Pensakix.github.io/web/rep01.html">1週目のレポート</a><br>
+        <a href="https://Pensakix.github.io/web/rep02.html">2週目のレポート</a><br>
+        <a href="https://Pensakix.github.io/web/rep03.html">3週目のレポート</a><br>
+        <a href="https://Pensakix.github.io/web/">私のホームページ</a><br>
       </div>
     </div>
   </div>
   <div class=footer>
-    作成日：20yy年mm月dd日
+    作成日：2025年12月29日
   </div>
 </body>
 </html>
