--- a/rep02.html
+++ b/rep02.html
@@ -22,7 +22,7 @@
 <body>
   <div class=header>
     <h1>2週目のレポート ： 公大高専１年実習I-1</h1>
-    <div>○○班○○番 ニックネーム</div>
+    <div>4b班31番 稗田泰慈</div>
   </div>
   <div class=2week>
     <h2>第2週目</h2>
@@ -30,11 +30,11 @@
       <h3>2-1 2週目のレポートをHTMLで作る</h3>
       <div>
         1.内容<br>
-        学習した内容を説明する文章を<br>
-        自分で考えて作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+      　第1週で習ったgithubで、機械学習、VR体験についての内容と感想をhtmlで書き表した。<br>
+        第一週で習った書き方や画像の注入を使った。<br>
         2.感想<br>
-        学習した内容を実践したときに自分が感じた感想を<br>
-        自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        まだhtmlに慣れていないが、第1週よりかは操作しやすくなったと感じる。<br>
+       自分がどの要素を書いているかがまだ判断が難しいため、もっとhtmlを触っていきたい。<br>
         3. 2週目が完成した人は1週目のレポートも完成させる<br>
       </div>
     </div>
@@ -44,11 +44,11 @@
       <img src="ml.png" alt="TeachableMachineの画像" width="50%" height="50%">
       <div>
         1.内容<br>
-        学習した内容を説明する文章を<br>
-        自分で考えて作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        じゃんけんの手を判別するために、自分の手をそれぞれ撮って機械に学習させた。<br>
+        また、出した手によって猫が左右に動くコードを作成して動かした。<br>
         2.感想<br>
-        学習した内容を実践したときに自分が感じた感想を<br>
-        自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        じゃんけんの手を判別するときに、100枚の手の画像では想定より精度が悪く驚いた。<br>
+        そのあとに300枚の画像をそれぞれ用意してやっと精度がよくなり、機械学習のコストが大きいことを実感した。<br>
       </div>
     </div>
 
@@ -57,11 +57,11 @@
       <img src="wroom.png" alt="metaWRの画像" width="50%" height="50%"> <img src="roblox.png" alt="ロブロックスの画像" width="50%" height="50%">
       <div>
         1.内容<br>
-        学習した内容を説明する文章を<br>
-        自分で考えて作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        VRゴーグルとコントローラーを用いて、Robloxをしたりアバターを作成した。<br>
+        Robloxでは、この高専の校舎を回ることができた。<br>
         2.感想<br>
-        学習した内容を実践したときに自分が感じた感想を<br>
-        自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        とにかく視点移動が慣れなかった。また移動がもっさりとしていて奈落に何回か落ちてしまった。<br>
+        Robloxを触ったことがないので、地形や構造物をどのように生成、設置しているのか気になった。<br>
       </div>
     </div>
 
@@ -77,7 +77,7 @@
     </div>
   </div>
   <div class=footer>
-    作成日：20yy年mm月dd日
+    作成日：2025年10月01日
   </div>
 </body>
 </html>
